2006-03-01  Matthew Gregan  <kinetik@orcon.net.nz>

	* transforms.cc, transforms.hh: Add utf8_validate function and
	some validity unit tests.
	(system_to_utf8): Check that conversion has resulted in valid
	UTF-8.
	* paths.cc (file_path::file_path): Check that path is valid UTF-8.

2006-02-28  Matthew Gregan  <kinetik@orcon.net.nz>

	* tests/t_mt_ignore.at: Fix test on MinGW/Win32.

2006-02-27  Richard Levitte  <richard@levitte.org>

	* po/sv.po: More translations.

2006-02-27  Timothy Brownawell  <tbrownaw@gmail.com>

	* netsync.cc: more logging

2006-02-27  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Updated translation.

2006-02-26  Nathaniel Smith  <njs@pobox.com>

	* revision.cc (parse_revision): Prepare for the future by giving a
	more user-friendly error message on unknown format_version
	strings.

2006-02-27  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Updated translations.

2006-02-26  Nathaniel Smith  <njs@pobox.com>

	* schema_migration.cc (migrate): Provide a little more feedback
	during migration, so it doesn't look like it's taking minutes and
	minutes just to "calculate necessary migration steps".

2006-02-26  Timothy Brownawell  <tbrownaw@gmail.com>

	Add a new command, merge_into_dir, to allow a project to include an
	unrelated project as a subdir. Also add a show_conflicts command that
	performs a dry-run merge and prints conflict counts.
	* commands.cc: new commands, merge_into_dir and show_conflicts
	* commands.cc (propagate): remove duplicated code; this now calls
	merge_into_dir with a dir of '' (the empty string).
	* monotone.texi: Document the new commands.
	* tests/t_{merge_into_dir,show_conflicts}.at: Test the new commands.
	* testsuite.at: Use the new tests.
	* merge.{cc,hh}: Factor a store_roster_merge_result function out
	of interactive_merge_and_store.

2006-02-26  Derek Scherger  <derek@echologic.com>

	* tests/t_log_dir.at: new XFAIL test of log restricted to a single
	directory
	* testsuite.at: call it
